# pytest-cloudreport

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
pytest_cloudreport/: __init__.py  local_report.py
pytest_cloudreport/templates/: local_report.html
tests/: test_local_report.py  test_plugin.py
